--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.0",
+    "react-select": "^5.10.2",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
